# modules/order/application/dto/order.go
@@ -3,11 +3,11 @@ package dto
 import "github.com/shopspring/decimal"
 
 type CreateOrderDTO struct {
-	PairID   string          `json:"pair_id"  validate:"required"`
-	Side     string          `json:"side"     validate:"required,oneof=buy sell"`
-	Type     string          `json:"type"     validate:"required,oneof=limit"`
-	Price    decimal.Decimal `json:"price"    validate:"required"`
-	Quantity decimal.Decimal `json:"quantity" validate:"required"`
+	PairID   string          `json:"pair_id"  validate:"required" required:"true"`
+	Side     string          `json:"side"     validate:"required,oneof=buy sell" required:"true"`
+	Type     string          `json:"type"     validate:"required,oneof=limit" required:"true"`
+	Price    decimal.Decimal `json:"price"    validate:"required" required:"true"`
+	Quantity decimal.Decimal `json:"quantity" validate:"required" required:"true"`
 }
 
 type ListOrdersDTO struct {
@@ -18,19 +18,19 @@ type ListOrdersDTO struct {
 }
 
 type OrderResponse struct {
-	ID        string `json:"id"         example:"550e8400-e29b-41d4-a716-446655440000"`
-	UserID    string `json:"user_id"    example:"550e8400-e29b-41d4-a716-446655440001"`
-	PairID    string `json:"pair_id"    example:"BTC_USDT"`
-	Side      string `json:"side"       example:"buy"`
-	Type      string `json:"type"       example:"limit"`
-	Price     string `json:"price"      example:"50000.00"`
-	Quantity  string `json:"quantity"   example:"0.5"`
-	FilledQty string `json:"filled_qty" example:"0"`
-	Status    string `json:"status"     example:"new"`
-	CreatedAt string `json:"created_at" example:"2026-04-12T00:00:00Z"`
-	UpdatedAt string `json:"updated_at" example:"2026-04-12T00:00:00Z"`
+	ID        string `json:"id"         required:"true" example:"550e8400-e29b-41d4-a716-446655440000"`
+	UserID    string `json:"user_id"    required:"true" example:"550e8400-e29b-41d4-a716-446655440001"`
+	PairID    string `json:"pair_id"    required:"true" example:"BTC_USDT"`
+	Side      string `json:"side"       required:"true" example:"buy"`
+	Type      string `json:"type"       required:"true" example:"limit"`
+	Price     string `json:"price"      required:"true" example:"50000.00"`
+	Quantity  string `json:"quantity"   required:"true" example:"0.5"`
+	FilledQty string `json:"filled_qty" required:"true" example:"0"`
+	Status    string `json:"status"     required:"true" example:"new"`
+	CreatedAt string `json:"created_at" required:"true" example:"2026-04-12T00:00:00Z"`
+	UpdatedAt string `json:"updated_at" required:"true" example:"2026-04-12T00:00:00Z"`
 }
 
 type OrderListResponse struct {
-	Orders []OrderResponse `json:"orders"`
+	Orders []OrderResponse `json:"orders" required:"true"`
 }
